@@ -464,6 +464,7 @@ nco_rgr_ini /* [fnc] Initialize regridding structure */
  char * const rgr_grd_src, /* I [sng] File containing input grid */
  char * const rgr_grd_dst, /* I [sng] File containing destination grid */
  char * const rgr_map, /* I [sng] File containing mapping weights from source to destination grid */
+ char * const rgr_var, /* I [sng] Variable for special regridding treatment */
  rgr_sct * const rgr_nfo) /* O [sct] Regridding structure */
 {
   /* Purpose: Initialize regridding structure */
@@ -472,16 +473,16 @@ nco_rgr_ini /* [fnc] Initialize regridding structure */
      Debugging:
      ncks -O -D 6 --rgr=Y ${DATA}/rgr/dstmch90_clm.nc ~/foo.nc
 
-     T42->T42 from scratch, minimal arguments:
+     T62->T42 from scratch, minimal arguments:
      ncks -O -D 6 --rgr=Y ${DATA}/rgr/dstmch90_clm.nc ~/foo.nc
-     T42->T42 from scratch, more arguments:
+     T62->T42 from scratch, more arguments:
      ncks -O -D 6 --rgr=Y --rgr_grd_dst=${DATA}/scrip/grids/remap_grid_T42.nc ${DATA}/rgr/dstmch90_clm.nc ~/foo.nc
-     T42->T42 from scratch, explicit arguments:
+     T62->T42 from scratch, explicit arguments:
      ncks -O --rgr=Y --rgr_grd_dst=${DATA}/scrip/grids/remap_grid_T42.nc --rgr_out=${DATA}/rgr/rgr_out.nc ${DATA}/rgr/dstmch90_clm.nc ~/foo.nc
      T42->T42 from scratch:
-     ncks -O --rgr=Y --rgr_grd_src=${DATA}/scrip/grids/remap_grid_T42.nc --rgr_grd_dst=${DATA}/scrip/grids/remap_grid_T42.nc --rgr_out=${DATA}/rgr/rgr_out.nc ${DATA}/rgr/dstmch90_clm.nc ~/foo.nc
+     ncks -O --rgr=Y --rgr_grd_src=${DATA}/scrip/grids/remap_grid_T42.nc --rgr_grd_dst=${DATA}/scrip/grids/remap_grid_T42.nc --rgr_out=${DATA}/rgr/rgr_out.nc ${DATA}/rgr/essgcm14_clm.nc ~/foo.nc
      T42->POP43 from existing weights:
-     ncks -O --rgr=Y --rgr_grd_src=${DATA}/scrip/grids/remap_grid_T42.nc --rgr_grd_dst=${DATA}/scrip/grids/remap_grid_POP43.nc --rgr_map=${DATA}/scrip/rmp_T42_to_POP43_conserv.nc --rgr_out=${DATA}/rgr/rgr_out.nc ${DATA}/rgr/dstmch90_clm.nc ~/foo.nc */
+     ncks -O --rgr=Y --rgr_grd_src=${DATA}/scrip/grids/remap_grid_T42.nc --rgr_grd_dst=${DATA}/scrip/grids/remap_grid_POP43.nc --rgr_map=${DATA}/scrip/rmp_T42_to_POP43_conserv.nc --rgr_out=${DATA}/rgr/rgr_out.nc ${DATA}/rgr/essgcm14_clm.nc ~/foo.nc */
 
   const char fnc_nm[]="nco_rgr_ini()";
   
@@ -501,6 +502,7 @@ nco_rgr_ini /* [fnc] Initialize regridding structure */
   rgr_nfo->fl_out=rgr_out; /* [sng] File containing regridded fields */
   rgr_nfo->fl_out_tmp=NULL_CEWI; /* [sng] Temporary file containing regridded fields */
   rgr_nfo->fl_map=rgr_map; /* [sng] File containing mapping weights from source to destination grid */
+  rgr_nfo->var_nm=rgr_var; /* [sng] Variable for special regridding treatment */
   
   /* Did user explicitly request regridding? */
   if(rgr_nbr > 0 || rgr_grd_src != NULL || rgr_grd_dst != NULL || rgr_out != NULL || rgr_map != NULL) rgr_nfo->flg_usr_rqs=True;
@@ -508,6 +510,7 @@ nco_rgr_ini /* [fnc] Initialize regridding structure */
   /* Initialize arguments after copying */
   if(!rgr_nfo->fl_out) rgr_nfo->fl_out=(char *)strdup("/data/zender/rgr/rgr_out.nc");
   if(!rgr_nfo->fl_grd_dst) rgr_nfo->fl_grd_dst=(char *)strdup("/data/zender/scrip/grids/remap_grid_T42.nc");
+  if(!rgr_nfo->var_nm) rgr_nfo->var_nm=(char *)strdup("ORO");
   
   if(nco_dbg_lvl_get() >= nco_dbg_crr){
     (void)fprintf(stderr,"%s: INFO %s reports\n",nco_prg_nm_get(),fnc_nm);
@@ -580,6 +583,7 @@ nco_rgr_free /* [fnc] Deallocate regridding structure */
   if(rgr_nfo->fl_out) rgr_nfo->fl_out=(char *)nco_free(rgr_nfo->fl_out);
   if(rgr_nfo->fl_out_tmp) rgr_nfo->fl_out_tmp=(char *)nco_free(rgr_nfo->fl_out_tmp);
   if(rgr_nfo->fl_map) rgr_nfo->fl_map=(char *)nco_free(rgr_nfo->fl_map);
+  if(rgr_nfo->var_nm) rgr_nfo->var_nm=(char *)nco_free(rgr_nfo->var_nm);
 
   /* Tempest */
   if(rgr_nfo->drc_dat) rgr_nfo->drc_dat=(char *)nco_free(rgr_nfo->drc_dat);
@@ -1002,15 +1006,13 @@ nco_rgr_esmf /* [fnc] Regrid using ESMF library */
 
   int *bnd_lwr_dst=(int *)nco_malloc(dmn_nbr_grd*sizeof(int));
   int *bnd_upr_dst=(int *)nco_malloc(dmn_nbr_grd*sizeof(int));
-
   double *lon_dst; /* [dgr] Destination grid longitude */
+  double *lat_dst; /* [dgr] Destination grid latitude */
   /* 20150427: Written documentation is somewhat inadequate or misleading to normal C-programmers
      Some ESMC_Grid***() functions, like this one, return allocated void pointers that must be cast to desired numeric type
      Source: ${DATA}/esmf/src/Infrastructure/Grid/interface/ESMC_Grid.C */
   lon_dst=ESMC_GridGetCoord(grd_dst,crd_idx_f_1bs_lon_dst,stg_lcn_dst,bnd_lwr_dst,bnd_upr_dst,&rcd_esmf);
   if(rcd_esmf != ESMF_SUCCESS) goto rgr_cln;
-
-  double *lat_dst; /* [dgr] Destination grid latitude */
   lat_dst=ESMC_GridGetCoord(grd_dst,crd_idx_f_1bs_lat_dst,stg_lcn_dst,bnd_lwr_dst,bnd_upr_dst,&rcd_esmf);
   if(rcd_esmf != ESMF_SUCCESS) goto rgr_cln;
 
@@ -1038,8 +1040,8 @@ nco_rgr_esmf /* [fnc] Regrid using ESMF library */
   /* Source: ${DATA}/esmf/src/Infrastructure/Grid/interface/ESMC_Grid.C */
   grd_src=ESMC_GridCreateNoPeriDim(max_idx_src,&crd_sys,&typ_knd,&rcd_esmf);
   if(rcd_esmf != ESMF_SUCCESS) goto rgr_cln;
+  /* fxm: why destroy this now? */
   ESMC_InterfaceIntDestroy(&max_idx_src);
-
   /* Define stagger locations on source grid. Necessary for remapping later? */
   rcd_esmf=ESMC_GridAddCoord(grd_src,stg_lcn_src);
   if(rcd_esmf != ESMF_SUCCESS) goto rgr_cln;
@@ -1067,6 +1069,8 @@ nco_rgr_esmf /* [fnc] Regrid using ESMF library */
   } /* endif dbg */
 
   /* Type-conversion and cell-center coordinates */
+  for(idx=0;idx<bnd_upr_src[crd_idx_f_0bs_lat_src];idx++) lat_src[idx]=lat_in[idx];
+  for(idx=0;idx<bnd_upr_src[crd_idx_f_0bs_lon_src];idx++) lon_src[idx]=lon_in[idx];
   idx=0;
   for(int idx_lat=0;idx_lat<bnd_upr_src[crd_idx_f_0bs_lat_src];idx_lat++){
     for(int idx_lon=0;idx_lon<bnd_upr_src[crd_idx_f_0bs_lon_src];idx_lon++){
@@ -1075,7 +1079,7 @@ nco_rgr_esmf /* [fnc] Regrid using ESMF library */
       idx++;
     } /* endfor */
   } /* endfor */
-
+  
   /* Create source field from source grid */
   ESMC_Field fld_src;
   ESMC_InterfaceInt *gridToFieldMap=NULL; /* [idx] Map of all grid dimensions to field dimensions */
@@ -1098,8 +1102,7 @@ nco_rgr_esmf /* [fnc] Regrid using ESMF library */
   if(rcd_esmf != ESMF_SUCCESS) goto rgr_cln;
 
   /* Get variables from input file */
-  char var_nm_in[]="ORO";
-  (void)nco_inq_varid(in_id,var_nm_in,&var_in_id);
+  (void)nco_inq_varid(in_id,rgr_nfo->var_nm,&var_in_id);
   (void)nco_inq_var(in_id,var_in_id,(char *)NULL,&var_typ_in,&dmn_nbr,(int *)NULL,(int *)NULL);
   /* Get dimension IDs from input file */
   (void)nco_inq_vardimid(in_id,var_in_id,dmn_id);
@@ -1134,7 +1137,7 @@ nco_rgr_esmf /* [fnc] Regrid using ESMF library */
     } /* idx_lon */
   } /* idx_lat */
 
-  ESMC_LogWrite("nco_rgr_esmf() invoking ESMC to start regridstore",log_msg_typ);
+  ESMC_LogWrite("nco_rgr_esmf() invoking ESMC to start regridstore actions",log_msg_typ);
   /* int *msk_val=(int *)nco_malloc(sizeof(int));
      msk_val[0]=1;
      ESMC_InterfaceInt i_msk_val=ESMC_InterfaceIntCreate(msk_val,1,&rcd_esmf);
@@ -1178,7 +1181,7 @@ nco_rgr_esmf /* [fnc] Regrid using ESMF library */
   dmn_ids_out[crd_idx_c_0bs_lon_dst]=dmn_id_lon;
   (void)nco_def_var(out_id,lon_nm_in,var_typ_out,1,&dmn_id_lon,&lon_out_id);
   (void)nco_def_var(out_id,lat_nm_in,var_typ_out,1,&dmn_id_lat,&lat_out_id);
-  (void)nco_def_var(out_id,var_nm_in,var_typ_out,2,dmn_ids_out,&var_out_id);
+  (void)nco_def_var(out_id,rgr_nfo->var_nm,var_typ_out,2,dmn_ids_out,&var_out_id);
   (void)nco_enddef(out_id);
   dmn_srt_out[crd_idx_c_0bs_lat_dst]=0L;
   dmn_srt_out[crd_idx_c_0bs_lon_dst]=0L;
